--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tanyasherbakov",
-  "homepage": "http://drortsky.github.io/tanyasherbakov",
+  "homepage": "http://tanyasherbakov.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
