--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
